--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ server.port=8080
 ocr.tesseract.datapath=C:\\Users\\rishit.rathod\\AppData\\Local\\Programs\\Tesseract-OCR\\tessdata
 ocr.tesseract.lang=eng
 ocr.tesseract.executable=C:\\Users\\rishit.rathod\\AppData\\Local\\Programs\\Tesseract-OCR\\tesseract.exe
+
+
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
