--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.servlet.multipart.max-request-size=15MB
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/lms
 spring.datasource.username=root
-spring.datasource.password=Rishit91@#15
+spring.datasource.password=Root@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
@@ -35,3 +35,21 @@ ocr.tesseract.executable=C:\\Users\\rishit.rathod\\AppData\\Local\\Programs\\Tes
 
 
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+# Email Configuration for Gmail (you need to configure App Password)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mahek266m@gmail.com
+spring.mail.password=dacw vsll ctvz afmr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+
+spring.mail.properties.mail.debug=true
+
+app.mail.from=mahek266m@gmail.com
