cloudinary configuration added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,3 +58,19 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.debug=true
 
 app.mail.from=mahek266m@gmail.com
+
+
+
+
+
+
+
+# Cloudinary Configuration
+cloudinary.cloud-name=dm5j5fm8v
+cloudinary.api-key=688771616576717
+cloudinary.api-secret=a5yvv6ZO7hbQdAF1Cymkwv0sFXs
+
+
+# File upload configuration
+
+spring.servlet.multipart.enabled=true
