external api calls updated"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,3 +74,35 @@ cloudinary.api-secret=a5yvv6ZO7hbQdAF1Cymkwv0sFXs
 # File upload configuration
 
 spring.servlet.multipart.enabled=true
+
+
+
+
+
+# External Fraud Database Configuration
+external.datasource.url=jdbc:mysql://mysql-509864-lms-external-db.b.aivencloud.com:25060/lms?sslmode=require
+external.datasource.username=avnaadmin
+external.datasource.password=AVNS_rqE__ioF5VVnjsU01bl
+external.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# External Fraud Screening Configuration
+external-fraud.screening.enabled=true
+external-fraud.screening.timeout-ms=10000
+external-fraud.screening.retry-attempts=3
+external-fraud.screening.cache-results=true
+external-fraud.screening.cache-duration-minutes=30
+
+# External Fraud Rules Configuration
+external-fraud.rules.criminal-record-weight=100
+external-fraud.rules.loan-default-weight=80
+external-fraud.rules.multiple-loans-threshold=5
+external-fraud.rules.high-debt-threshold=1000000
+external-fraud.rules.clean-threshold=24
+external-fraud.rules.low-threshold=49
+external-fraud.rules.medium-threshold=79
+external-fraud.rules.high-threshold=119
+external-fraud.rules.internal-weight=0.6
+external-fraud.rules.external-weight=0.4
+
+# Logging for External Fraud
+logging.level.com.tss.springsecurity.externalfraud=DEBUG
