--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=loan-app
+spring.application.name=lms
 
 # Multipart upload limits
 spring.servlet.multipart.max-file-size=15MB
@@ -7,7 +7,7 @@ spring.servlet.multipart.max-request-size=15MB
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/lms
 spring.datasource.username=root
-spring.datasource.password=Rishit91@#15
+spring.datasource.password=Root@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
