application document extraction with springboot

--- a/extraction/.env
+++ b/extraction/.env
@@ -2,7 +2,7 @@
 # 🌐 Database Configuration
 # ===========================
 DB_USER=root
-DB_PASS=Rishit91@#15
+DB_PASS=Root@123
 DB_HOST=127.0.0.1
 DB_NAME=lms
 DB_PORT=3306
