--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^4.5.1",
     "ng-recaptcha": "^13.2.1",
     "ng2-charts": "^8.0.0",
+    "ngx-toastr": "^19.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
